fix: Table selection arrow get covered by fixed column (#32276)
* added higher z-index to selection column fixes #32268

* suggested changes

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -437,6 +437,10 @@
     }
   }
 
+  table tr th&-selection-column&-cell-fix-left {
+    z-index: 3;
+  }
+
   table tr th&-selection-column::after {
     background-color: transparent !important;
   }
